--- a/src/crytoprice/cryptoprice.css
+++ b/src/crytoprice/cryptoprice.css
@@ -1,5 +1,5 @@
 .CryptoWrapper {
-    height: 600px;
+    height: 1200px;
     width: 100%;
     margin-top: -5px;
     background: rgba(3, 14, 33, 1);
@@ -18,7 +18,7 @@
     text-shadow: 0 2px 30px #21ce99;
     position: relative;
     width: 100%;
-    top: 100px;
+    top: 200px;
 }
 
 .CryptoWrapper h3 {
@@ -32,7 +32,7 @@
     padding: 0;
     position: relative;
     display: inline-block;
-    top: 200px;
+    top: 400px;
 }
 
 .CryptoTitle li {
